# silverclaw

./: CMakeLists.txt  LICENSE  README.md  SilverClawApp.cpp  SilverClawApp.h  main.cpp
resources/: sc_menu.ui  silverclaw.glade
